fix responsive on smaller devices

--- a/style.css
+++ b/style.css
@@ -1093,6 +1093,12 @@ background-color: #1c2938;
 /* end of feeds page */
 
 /* responsive */
+@media (max-width: 1600px) {
+	/* news feed page */
+	.follow {
+		left: 58.5%;
+	}
+}
 @media (max-width: 1300px) {
   /* main page */
   .middle-content {
@@ -1106,6 +1112,11 @@ background-color: #1c2938;
   .main-page-footer li {
     margin-bottom: 1rem;
   }
+
+  /* news feed page */
+	.follow {
+		left: 60%;
+	}
 }
 
 @media (max-width: 1100px) {
@@ -1142,7 +1153,102 @@ background-color: #1c2938;
   .main-page-footer {
     grid-row: 3 / 4;
   }
+
+  /* login page */
+  .login-page-nav ul {
+    width: 80rem;
+  }
+
+  .login {
+    width: 80rem;
+  }
+
+  .login-modal {
+    width: 60rem;
+  }
+
+  	/* news feed page */
+	.feeds-content {
+		grid-template-columns: minmax(5rem, 1fr) 2fr minmax(5rem, 1fr);
+	}
+
+	.search-bar {
+		display: none;
+	}
+
+	.follow {
+		display: none;
+	}
+
+	.post-btn {
+		left: 80%;
+	}
 }
+
+/* login page */
+@media (max-width: 900px) {
+  /* login page */
+  .login-page-nav ul {
+    width: 60rem;
+  }
+
+  .login {
+    width: 60rem;
+  }
+
+  .login-modal {
+    width: 50rem;
+  }
+}
+
+@media (max-width: 700px) {
+  /* login page */
+  .login-page-nav ul {
+    width: 50rem;
+  }
+
+  .login {
+    width: 50rem;
+  }
+
+  .login-modal {
+    width: 40rem;
+  }
+
+  /* news feed page */
+	.feeds-content {
+		grid-template-columns: 1fr;
+	}
+
+	.feeds-header {
+		grid-column: 1 / -1;
+	}
+
+	.posts {
+		grid-column: 1 / -1;
+	}
+
+	.modal {
+		width: 90%;
+	}
+
+	.modal-img {
+		flex-shrink: 0;
+	}
+
+	.post-btn {
+		left: 75%;
+		font-size: 1.8rem;
+		width: 11rem;
+		padding: 1.2rem 0.8rem;
+	}
+
+	.sidebar-list-1 li,
+	.sidebar-list-2 li {
+		margin-bottom: 1.5rem;
+	}
+}
+/* end of login page */
 
 @media (max-width: 800px) {
   /* main page */
@@ -1181,6 +1287,67 @@ background-color: #1c2938;
     grid-row: 1 / 2;
     width: 90%;
   }
+
+   /* login page */
+  .login-page-nav ul {
+    width: 40rem;
+  }
+
+  .login {
+    width: 40rem;
+    grid-template-columns: 5rem 8fr;
+  }
+
+  .login-form label {
+    font-size: 1.4rem;
+  }
+
+  .login-form a {
+    font-size: 1.4rem;
+  }
+
+  .login-footer {
+    padding-left: 5rem;
+  }
+
+  .login-footer p {
+    font-size: 1.4rem;
+  }
+
+  .login-modal {
+    width: 30rem;
+  }
+
+  .login-modal i {
+    top: 2.5rem;
+  }
+
+  .login-modal p {
+    font-size: 1.4rem;
+  }
+
+  /* news feed page */
+	.user a,
+	.user i {
+		display: none;
+	}
+
+	.header-post input {
+		width: 27rem;
+	}
+
+	.post-text {
+		width: 90%;
+	}
+
+	.post-img {
+		width: 90%;
+		height: 25rem;
+	}
+
+	.post-btn {
+		left: 70%;
+	}
 }
 
 @media (max-width: 500px) {
@@ -1188,6 +1355,100 @@ background-color: #1c2938;
   .middle-content h1 {
     font-size: 2.5rem;
   }
+
+   /* login page */
+  .login-page-nav ul {
+    width: 30rem;
+  }
+
+  .login {
+    width: 30rem;
+    grid-template-columns: 2rem 8fr;
+  }
+
+  .login-form input:not(.login-form-checkbox) {
+    width: 20rem;
+  }
+
+  .login-form a {
+    display: block;
+    margin-top: 1.5rem;
+  }
+
+  .login-footer {
+    padding-left: 2rem;
+  }
+
+  /* news feed page */
+	.icons a {
+		margin-right: 5rem;
+	}
+
+	.header-img-wrapper {
+		display: none;
+	}
+
+	.header-post {
+		justify-content: center;
+	}
+
+	.header-post input {
+		width: 20rem;
+	}
+
+	.post {
+		padding: 1rem;
+	}
+
+	.user-avatar {
+		width: 4rem;
+		height: 4rem;
+		margin-right: 1rem;
+	}
 }
 
-/* end of responsive */
+@media (max-width: 400px) {
+  /* login page */
+  .login-page {
+    grid-template-columns: 2rem 2fr 2rem;
+  }
+
+  .login {
+    width: 100%;
+  }
+
+  .login-modal {
+    width: 25rem;
+  }
+
+  /* news feed page */
+	.icons i {
+		font-size: 2rem;
+	}
+
+	.icons a {
+		margin-right: 4rem;
+	}
+
+	.user {
+		margin-left: 1rem;
+	}
+
+	.header-post input {
+		width: 16rem;
+	}
+
+	.header-post i {
+		font-size: 2rem;
+	}
+
+	.post-icons i {
+		margin-right: 4rem;
+	}
+
+	.post-btn {
+		left: 60%;
+	}
+}
+
+/* end of main page responsive */
